--- a/package.json
+++ b/package.json
@@ -33,15 +33,16 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "nyc mocha"
   },
   "dependencies": {
-    "underscore": ">= 1.1.6 < 1.14",
-    "semver": ">= 5 < 6"
+    "semver": ">= 5 < 6",
+    "underscore": ">= 1.1.6 < 1.14"
   },
   "devDependencies": {
     "mocha": ">= 1.12.0 < 3",
     "must": ">= 0.13 < 0.14",
+    "nyc": "^15.1.0",
     "sinon": ">= 1.9 < 2"
   },
   "engines": {
