--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "nyc mocha"
+    "test": "nyc mocha",
+    "lint": "prettier --check \"{lib,test}/**/*.{js,json,ts}\" \"*.{js,json,md}\"",
+    "lint:fix": "prettier --write \"{lib,test}/**/*.{js,json,ts}\" \"*.{js,json,md}\""
   },
   "dependencies": {
     "semver": ">= 5 < 6",
@@ -43,6 +45,7 @@
     "mocha": ">= 1.12.0 < 3",
     "must": ">= 0.13 < 0.14",
     "nyc": "^15.1.0",
+    "prettier": "^2.5.0",
     "sinon": ">= 1.9 < 2"
   },
   "engines": {
