--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "test": "nyc mocha"
   },
   "devDependencies": {
-    "mocha": ">= 1.12.0 < 3",
     "must": ">= 0.13 < 0.14",
     "nyc": "^15.1.0",
     "prettier": "^2.5.0",
-    "sinon": ">= 1.9 < 2"
+    "sinon": ">= 1.9 < 2",
+    "uvu": "^0.5.2"
   },
   "engines": {
     "node": ">= 14"
