refactor: make it a native ES Module

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mitm",
   "version": "1.7.2",
+  "type": "module",
   "description": "Intercept and mock outgoing network TCP connections and HTTP requests for testing. Intercepts and gives you a Net.Socket, Http.IncomingMessage and Http.ServerResponse to test and respond with. Useful when testing code that hits remote servers.",
   "keywords": [
     "http",
@@ -31,7 +32,7 @@
       "url": "https://github.com/moll/node-mitm/blob/master/LICENSE"
     }
   ],
-  "main": "index.js",
+  "exports": "./index.js",
   "scripts": {
     "coverage": "nyc report --reporter html && open coverage/index.html",
     "lint": "prettier --check \"{lib,test}/**/*.{js,json,ts}\" \"*.{js,json,md}\"",
