--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
       - run: npm ci
-      - run: npm run test:ci
+      - run: npm test
 
   # separate job to set as required in branch protection,
   # as the build names above change each time Node versions change
