--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "c8": "^7.10.0",
     "prettier": "^2.5.0",
-    "sinon": ">= 1.9 < 2",
+    "sinon": "^12.0.1",
     "uvu": "^0.5.2"
   },
   "engines": {
