--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,4 +50,5 @@ jobs:
           node-version: 16
           cache: npm
       - run: npm ci
+      - run: npm run typecheck
       - run: npm run lint
