--- a/package.json
+++ b/package.json
@@ -1,51 +1,49 @@
 {
-	"name": "mitm",
-	"version": "1.7.2",
-	"description": "Intercept and mock outgoing network TCP connections and HTTP requests for testing. Intercepts and gives you a Net.Socket, Http.IncomingMessage and Http.ServerResponse to test and respond with. Useful when testing code that hits remote servers.",
-	"keywords": [
-		"http",
-		"https",
-		"intercept",
-		"interception",
-		"mock",
-		"network",
-		"socket",
-		"tcp",
-		"test",
-		"webmock"
-	],
-	"homepage": "https://github.com/moll/node-mitm",
-	"bugs": "https://github.com/moll/node-mitm/issues",
-
-	"author": {
-		"name": "Andri Möll",
-		"email": "andri@dot.ee",
-		"url": "http://themoll.com"
-	},
-
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/moll/node-mitm.git"
-	},
-
-	"licenses": [{
-		"type": "LAGPL",
-		"url": "https://github.com/moll/node-mitm/blob/master/LICENSE"
-	}],
-
-	"main": "index.js",
-	"scripts": {"test": "make test"},
-
-	"dependencies": {
-		"underscore": ">= 1.1.6 < 1.14",
-		"semver": ">= 5 < 6"
-	},
-
-	"devDependencies": {
-		"mocha": ">= 1.12.0 < 3",
-		"must": ">= 0.13 < 0.14",
-		"sinon": ">= 1.9 < 2"
-	},
-
-	"engines": {"node": ">= 0.10.24"}
+  "name": "mitm-esm",
+  "version": "0.0.0-development",
+  "type": "module",
+  "description": "Intercept and mock outgoing network TCP connections and HTTP requests for testing. Intercepts and gives you a Net.Socket, Http.IncomingMessage and Http.ServerResponse to test and respond with. Useful when testing code that hits remote servers.",
+  "keywords": [
+    "http",
+    "https",
+    "intercept",
+    "interception",
+    "mock",
+    "network",
+    "socket",
+    "tcp",
+    "test",
+    "webmock"
+  ],
+  "author": {
+    "name": "Andri Möll",
+    "email": "andri@dot.ee",
+    "url": "http://themoll.com"
+  },
+  "repository": "github:gr2m/mitm-esm",
+  "licenses": [
+    {
+      "type": "LAGPL",
+      "url": "https://github.com/gr2m/mitm-esm/blob/master/LICENSE"
+    }
+  ],
+  "exports": "./index.js",
+  "scripts": {
+    "coverage": "c8 report --reporter html && open coverage/index.html",
+    "lint": "prettier --check \"{lib,test}/**/*.{js,json,ts}\" \"*.{js,json,md}\"",
+    "lint:fix": "prettier --write \"{lib,test}/**/*.{js,json,ts}\" \"*.{js,json,md}\"",
+    "test": "c8 --100 uvu",
+    "typecheck": "tsc --allowJs --noEmit --esModuleInterop *.js lib/*.js"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.11",
+    "c8": "^7.10.0",
+    "prettier": "^2.5.0",
+    "sinon": "^12.0.1",
+    "typescript": "^4.5.2",
+    "uvu": "^0.5.2"
+  },
+  "engines": {
+    "node": ">= 14"
+  }
 }
