--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "lint": "prettier --check \"{lib,test}/**/*.{js,json,ts}\" \"*.{js,json,md}\"",
     "lint:fix": "prettier --write \"{lib,test}/**/*.{js,json,ts}\" \"*.{js,json,md}\"",
     "test": "c8 --100 uvu",
-    "typecheck": "tsc --allowJs --noEmit --esModuleInterop *.js lib/*.js"
+    "typecheck": "tsd && tsc --allowJs --noEmit --esModuleInterop *.js lib/*.js"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
     "c8": "^7.10.0",
     "prettier": "^2.5.0",
     "sinon": "^12.0.1",
+    "tsd": "^0.19.0",
     "typescript": "^4.5.2",
     "uvu": "^0.5.2"
   },
