--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
       - run: npm ci
-      - run: npm test
+      - run: npm run test:code
 
   # separate job to set as required in branch protection,
   # as the build names above change each time Node versions change
@@ -49,5 +49,6 @@ jobs:
           node-version: 16
           cache: npm
       - run: npm ci
+      - run: npm test
       - run: npm run typecheck
       - run: npm run lint
